<resources>
    <string name="app_name">Hipe</string>
    <string name="action_settings">Settings</string>

    <string name="notification_ticker1">You\'ve been invited to </string>
    <string name="notification_ticker2"> parties! </string>

    <string name="notification_person_content_title">invited you to a party!</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog_select_camera">camera</string>
    <string name="dialog_select_storage">dialog_select_storage</string>
    <string name="image">image</string>
    <string name="base_image">base image</string>
    <string name="hipe_logo">hipe logo</string>
    <string name="hipe_name">H I P E</string>
    <string name="auth_error_message">Incorrect username or password</string>
    <string name="lock">lock</string>
    <string name="password_text">PASSWORD</string>
    <string name="default_password_text">Puschinarij1</string>
    <string name="sign_in_text">Sign in</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="camera">camera</string>
    <string name="location">location</string>
    <string name="map">map</string>
    <string name="mail">mail</string>
    <string name="wait">wait</string>
    <string name="slogan">On The Motion</string>
    <string name="account_image">account image</string>
    <string name="name_and_surname">Name and surname</string>
    <string name="pasha_borisyk">pasha borisyk</string>
    <string name="not_less_than_8_characters">Not less than 8 characters</string>
    <string name="pooch">\@</string>
    <string name="username">Type username</string>
    <string name="pashaborisyk">pashaborisyk</string>
    <string name="password">Type password</string>
    <string name="email">Type email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">Next</string>
    <string name="pashaborisyk_colon">pashaborisyk:</string>
    <string name="default_message_string">As described, there are 10 different perspectives of early psychology.</string>
    <string name="default_time">10:32pm</string>
    <string name="integrate_friends">Integrate friends</string>
    <string name="search">search</string>
    <string name="no_results">No results</string>
    <string name="default_address">Rainbow str. room 22</string>
    <string name="cafe">Cafe</string>
    <string name="party">party</string>
    <string name="pashaborisyk_hello_there">pashaborisyk : Hello there</string>
    <string name="_9_members">9 members</string>
    <string name="back">back</string>
    <string name="_9">9</string>
    <string name="get_on_the_table_and_dance">Get on the table and dance</string>
    <string name="follow">follow</string>
    <string name="invite">invite</string>
    <string name="events">vents</string>
    <string name="contacts">Contacts</string>
    <string name="pashaborisyk_nickname">\@pashaborisyk</string>
    <string name="event_image">Event image</string>
    <string name="add_photo">Add photo</string>
    <string name="hash_tag">Hash tag</string>
    <string name="tag">Tag</string>
    <string name="tag_description">This is necessary to make your friends able to find you in the waves of rave</string>
    <string name="calendar">Calendar</string>
    <string name="full_date">Sunday 16 april</string>
    <string name="date_description">Choose the date for your event</string>
    <string name="choose_the_location">Choose the location</string>
    <string name="is_private">Is private</string>
    <string name="private_party">Private party</string>
    <string name="if_is_not_private_hint">If the party is not private it will be visible for everybody</string>
    <string name="gender_man">Gender man</string>
    <string name="gender_woman">Gender woman</string>
    <string name="gender_select">SEX</string>
    <string name="gender_select_hint">Only chosen sex will be able to find your party</string>
    <string name="add_friend">Add friend</string>
    <string name="_plus_23">+23</string>
    <string name="invite_notification_hint">Friends that were invited by you will get the notifiation</string>
    <string name="created_an_event">\ created an event</string>
    <string name="default_event_description">9 minutes ago at Raduznaja street 9:00 PM</string>
    <string name="event_type_ring">event type ring</string>
    <string name="plus">plus</string>
    <string name="go">go</string>
    <string name="go_to_chat">go to chat</string>
    <string name="chat">chat</string>
    <string name="info">info</string>
    <string name="event_default_hash_tag">#Pashas_event</string>
    <string name="_12_photos">12 photos</string>
    <string name="type_message">Type message</string>
    <string name="no_connection_detected">No connection detected</string>
    <string name="hide">Hide</string>
    <string name="repeat">Repeat</string>
    <string name="dismiss">Dismiss</string>
    <string name="max_length_msg">Max length is </string>
    <string name="cannot_obtain_connection_message">Cannot connect to the server. Try again later</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="invalid_credentials">Incorrect login or password. Try again</string>
    <string name="user_already_exists">User with this username already exists</string>
    <string name="receive_updates_via_email_agreement">I agree to receive service updates \n at e-mail address typed above</string>
    <string name="privacy_policy_agreement">I agree with privacy policy \n provided by this service</string>
    <string name="confirm_email_request">We\'ve send a confirmation mail to the address provided before. Please confirm your registration until tomorrow</string>
    <string name="time_remaining">Time remaining:</string>
    <string name="video_stream_url_address">http://40.115.107.135:3333</string>

</resources>
