<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/base_image"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/main_background"
        android:tint="#7f000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center|center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="0dp">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:contentDescription="@string/hipe_logo"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/hipe_logotype" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="10dp"
            android:fontFamily="monospace"
            android:text="@string/hipe_name"
            android:textColor="#fff"
            android:textSize="23sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:background="#40ffffff"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_1480004634_user_light" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:background="#80ffffff" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0000"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:padding="3dp"
                android:text="@string/pashaborisyk"
                android:textColor="#fff"
                android:textColorHint="#80ffffff"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/fault_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:gravity="left"
            android:text="@string/auth_error_message"
            android:textColor="#FFF12652"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="#40ffffff"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/lock"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_1480006231_streamline_68_light" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:background="#80ffffff" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#0000"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:padding="3dp"
                android:text="@string/default_password_text"
                android:textColor="#fff"
                android:textColorHint="#80ffffff"
                android:textSize="15sp" />
        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rect_white"
            android:text="@string/sign_in_text"
            android:textColor="#4b4b4b"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sign_in_user_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/don_t_have_account_yet"
                android:textColor="#88ffffff"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>