<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ecedef"
    android:clipChildren="false">


    <android.support.v7.widget.CardView
        android:id="@+id/root_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="#fff"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:clipChildren="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:clipChildren="false"
                android:src="@drawable/me_photo">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_photo"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/me_photo" />

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/user_photo"
                    android:layout_alignStart="@+id/user_photo"
                    android:layout_alignTop="@+id/user_photo"
                    android:layout_marginLeft="45dp"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/pashaborisyk"
                    android:textColor="#4b4b4b"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/description_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/nickname"
                    android:layout_alignBottom="@+id/nickname"
                    android:layout_toEndOf="@+id/nickname"
                    android:layout_toRightOf="@+id/nickname"
                    android:text="@string/created_an_event"
                    android:textColor="#4b4b4b" />

                <TextView
                    android:id="@+id/description_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/nickname"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/nickname"
                    android:layout_marginBottom="5dp"
                    android:maxLines="2"
                    android:text="@string/default_event_description"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/event_type_ring"
                    app:srcCompat="@drawable/circle_red" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/button_add"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:contentDescription="@string/plus"
                        app:srcCompat="@drawable/ic_1480796191_add" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/go"
                        android:textColor="#FF979A9F" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/button_chat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:contentDescription="@string/go_to_chat"
                        app:srcCompat="@drawable/ic_1480797203_message_01" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chat"
                        android:textColor="#FF979A9F" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/button_expand_info"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:contentDescription="@string/info"
                        android:scaleType="center"
                        app:srcCompat="@drawable/ic_1480797893_info_2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info"
                        android:textColor="#FF979A9F" />


                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>