<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_margin="14dp"
            android:contentDescription="@string/action_settings"
            android:scaleType="centerCrop"
            android:src="@drawable/me_photo" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:gravity="center_horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="0dp"
            android:text="@string/pashaborisyk_nickname"
            android:textColor="#4b4b4b"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_name_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="8dp"
            android:text="@string/pasha_borisyk"
            android:textColor="#b74b4b4b"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>